bgd-demo/bgd-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: bgd-demo
  name: bgd-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bgd-demo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bgd-demo
    spec:
      containers:
      - image: quay.io/redhatworkshops/bgd:latest
        name: bgd-demo
        resources: {}
---
