bgd-demo/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: bgd-demo
  name: bgd-demo
  namespace: bgd-demo
spec:
  host: ""
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd-demo
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
